--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - checkout
       - run:
-          - name: Configure Github credentials
+          name: Configure Github credentials
           command: |
             git config user.email $GITHUB_EMAIL
             git config user.name $GITHUB_USERNAME
